--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,6 @@
 {
   "plugins": ["prettier"],
-  "extends": ["plugin:node/recommended", "prettier"],
+  "extends": ["plugin:node/recommended", "plugin:prettier/recommended"],
   "env": {
     "node": true,
     "commonjs": true,
